--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,29 @@
     border-color: #F5C518;
 }
 
+/*edit profile*/
+#profile-image-container {
+    width: 150px;
+    height: 150px;
+    border: 6px solid #F5C518;
+    border-radius: 100%;
+    background-size: cover;
+    background-position: center;
+    margin: 15px auto;
+}
+
+.page-description {
+    color: #999;
+}
+
+.disabled {
+    background-color: #CCC;
+}
+
+#change-password-container {
+    margin-top: 30px;
+}
+
 /*footer*/
 #footer {
     background-color: #000;
