--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@
 }
 
 /*edit profile*/
-#profile-image-container {
+#profile-image-container, .profile-image-container {
     width: 150px;
     height: 150px;
     border: 6px solid #F5C518;
@@ -200,6 +200,11 @@
     background-size: cover;
     background-position: center;
     margin: 15px auto;
+}
+
+.profile-image-container {
+    width:  70px;
+    height: 70px;
 }
 
 .page-description {
@@ -212,6 +217,10 @@
 
 #change-password-container {
     margin-top: 30px;
+}
+
+#add-movie-container .card-btn, #review-form .card-btn, #edit-movie-form .card-btn{
+    width: auto;
 }
 
 /*new movie*/
@@ -237,6 +246,126 @@
     display: block;
     margin: 0 auto;
     padding-top: 7px
+}
+
+/*Movie*/
+.movie-container {
+    text-align: center;
+}
+
+.movie-details {
+    margin: 25px 0;
+}
+
+.pipe {
+    border: 1px solid #333;
+    margin: 0 10px;
+}
+
+#reviews-title {
+    margin-bottom: 25px;
+}
+
+#review-form-container {
+    background-color: #333;
+    padding: 20px;
+}
+
+#review-form-container select, #review-form-container textarea {
+    width: 50%;
+}
+
+#reviews-container {
+    margin-top: 20px;
+    padding-top: 20px;
+    border-top: 4px solid #F5C518;
+}
+
+.revies {
+    padding: 20px 0;
+    border-bottom: 1px solid #333;
+}
+
+.author-details-container {
+    padding-top: 20px;
+}
+
+.author-name a {
+    color: #F5C518;
+}
+
+.comment-title {
+    color: #999;
+}
+
+
+/*Dashboard*/
+#add-movie-container {
+    text-align: right;
+}
+
+#main-container table, #main-container thead, #main-container tbody,
+#main-container tr, #main-container th, #main-container td {
+    background-color: #000;
+    color: #fff;
+}
+
+#movies-dashboard .table th {
+    border-top: none;
+}
+
+#movies-dashboard .table tr {
+    padding: 15px 0;
+}
+
+.table-movie-title {
+  color: #FFF;
+  font-weight: bold;
+  transition: .5s;
+  text-decoration: none;
+}
+
+.table-movie-title:hover {
+  color: #F5C518;
+}
+
+.actions-column {
+  max-width: 75px;
+  text-align: center;
+}
+
+.actions-column form {
+  display: inline-block;
+}
+
+.edit-btn, .delete-btn {
+  padding: 5px 10px;
+  border-radius: 5px;
+  margin: 0 5px;
+  font-weight: bold;
+  transition: .5s;
+  border: none;
+}
+
+.edit-btn {
+  background-color: #0DCAF0;
+  color: #FFF;
+  text-decoration: none;
+}
+
+.edit-btn:hover {
+  background-color: transparent;
+  color: #0DCAF0;
+}
+
+.delete-btn {
+  background-color: #DC3545;
+  color: #FFF;
+}
+
+.delete-btn:hover {
+  background-color: transparent;
+  color: #DC3545;
 }
 
 /*footer*/
