--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,39 @@
     width: auto;
 }
 
+.profile-container {
+    justify-content: center;
+}
+
+.profile-container .profile-image {
+    margin: 20px auto;
+}
+
+.about-title {
+    color: #CCC;
+}
+
+.profile-description {
+    max-width: 500px;
+    margin: 20px auto;
+}
+
+.added-movies-container, .about-container {
+    padding-top: 20px;
+}
+
+.about-container {
+    text-align: center;
+    background-color: #333;
+    border-bottom: 3px solid #CCC;
+}
+
+.added-movies-container .movie-container {
+    padding: 20px;
+}
+
+
+
 /*new movie*/
 .new-movie-container {
     text-align: center;
