--- a/css/style.css
+++ b/css/style.css
@@ -254,8 +254,6 @@
     padding: 20px;
 }
 
-
-
 /*new movie*/
 .new-movie-container {
     text-align: center;
@@ -399,6 +397,15 @@
 .delete-btn:hover {
   background-color: transparent;
   color: #DC3545;
+}
+
+/*search*/
+#search-title {
+    font-size: 40px;
+}
+
+#search-result, .back-link {
+    color: #F5C518;
 }
 
 /*footer*/
